--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   },
   "devDependencies": {
     "eslint-config-custom": "*",
+    "nodemon": "^2.0.21",
     "prettier": "latest",
+    "ts-node": "^10.9.1",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
-  "packageManager": "npm@9.3.1"
+  "packageManager": "npm@9.3.1",
+  "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "papaparse": "^5.4.0",
+    "vitest": "^0.29.2"
+  }
 }
