--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-custom": "*",
     "nodemon": "^2.0.21",
     "prettier": "latest",
+    "serverless": "^3.28.1",
     "ts-node": "^10.9.1",
     "turbo": "latest"
   },
@@ -24,6 +25,7 @@
   },
   "packageManager": "npm@9.3.1",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.282.0",
     "@faker-js/faker": "^7.6.0",
     "papaparse": "^5.4.0",
     "vitest": "^0.29.2"
