--- a/apps/reports/package.json
+++ b/apps/reports/package.json
@@ -6,6 +6,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
+    "exec": "ts-node ./src/index.ts",
     "test": "vitest"
   },
   "keywords": [],
