--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
     "@faker-js/faker": "^7.6.0",
+    "esbuild": "0.17.10",
     "papaparse": "^5.4.0",
     "vitest": "^0.29.2"
   }
