--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ coverage
 
 # next.js
 .next/
-out/
-build
 
 # misc
 .DS_Store
@@ -32,4 +30,10 @@ yarn-error.log*
 # turbo
 .turbo
 
+# out dirs
 dist/
+out/
+build
+
+# serverless
+.serverless
