--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@serverless/compose": "^1.3.0",
     "@types/papaparse": "^5.3.7",
     "eslint-config-custom": "*",
     "nodemon": "^2.0.21",
