--- a/apps/reports/package.json
+++ b/apps/reports/package.json
@@ -21,7 +21,9 @@
     "@aws-sdk/credential-providers": "^3.282.0",
     "@faker-js/faker": "^7.6.0",
     "esbuild": "^0.17.10",
-    "papaparse": "^5.4.0",
-    "tsconfig": "*"
+    "papaparse": "^5.4.0"
+  },
+  "devDependencies": {
+    "tsconfig": "^0.0.0"
   }
 }
