Deploy ECS cluster

--- a/infra/reports/ecr/serverless.yml
+++ b/infra/reports/ecr/serverless.yml
@@ -31,5 +31,5 @@ resources:
         # RepositoryPolicyText: Json
 
   Outputs:
-    reportsArn:
+    reportsRegistryArn:
       Value: !GetAtt ReportsEcrRepository.Arn
