--- a/infra/reports/ecs/serverless.yml
+++ b/infra/reports/ecs/serverless.yml
@@ -16,45 +16,48 @@ custom:
 
 resources:
   Resources:
-    Type: AWS::ECS::Cluster
-    Properties:
-      CapacityProviders:
-        - FARGATE
-      ClusterName: reports-cluster
-      ClusterSettings:
-        - Name: containerInsights
-          Value: enabled
-      # Configuration: ClusterConfiguration
-      DefaultCapacityProviderStrategy:
-        - Base: 1
-          CapacityProvider: FARGATE
-          Weight: 1
-      # ServiceConnectDefaults: ServiceConnectDefaults
-      Tags:
-        - reports-cluster
+    ReportsEcsCluster:
+      Type: AWS::ECS::Cluster
+      Properties:
+        CapacityProviders:
+          - FARGATE
+        ClusterName: reports-cluster
+        ClusterSettings:
+          - Name: containerInsights
+            Value: enabled
+        # Configuration: ClusterConfiguration
+        DefaultCapacityProviderStrategy:
+          - Base: 1
+            CapacityProvider: "FARGATE"
+            Weight: 1
+        # ServiceConnectDefaults: ServiceConnectDefaults
+        Tags:
+          - Key: "reports-cluster"
+            Value: "reports-cluster"
 
-    # Type: AWS::ECS::TaskDefinition
-    # Properties:
-    #   ContainerDefinitions:
-    #     - ContainerDefinition
-    #   Cpu: String
-    #   EphemeralStorage: EphemeralStorage
-    #   ExecutionRoleArn: String
-    #   Family: String
-    #   InferenceAccelerators:
-    #     - InferenceAccelerator
-    #   IpcMode: String
-    #   Memory: String
-    #   NetworkMode: String
-    #   PidMode: String
-    #   PlacementConstraints:
-    #     - TaskDefinitionPlacementConstraint
-    #   ProxyConfiguration: ProxyConfiguration
-    #   RequiresCompatibilities:
-    #     - String
-    #   RuntimePlatform: RuntimePlatform
-    #   Tags:
-    #     - Tag
-    #   TaskRoleArn: String
-    #   Volumes:
-    #     - Volume
+      # TaskNameHere:
+      #   Type: AWS::ECS::TaskDefinition
+      #   Properties:
+      #     ContainerDefinitions:
+      #       - ContainerDefinition
+      #     Cpu: String
+      #     EphemeralStorage: EphemeralStorage
+      #     ExecutionRoleArn: String
+      #     Family: String
+      #     InferenceAccelerators:
+      #       - InferenceAccelerator
+      #     IpcMode: String
+      #     Memory: String
+      #     NetworkMode: String
+      #     PidMode: String
+      #     PlacementConstraints:
+      #       - TaskDefinitionPlacementConstraint
+      #     ProxyConfiguration: ProxyConfiguration
+      #     RequiresCompatibilities:
+      #       - String
+      #     RuntimePlatform: RuntimePlatform
+      #     Tags:
+      #       - Tag
+      #     TaskRoleArn: String
+      #     Volumes:
+      #       - Volume
