Add push branches to CI

--- a/.github/workflows/containerize-and-deploy-reports.yml
+++ b/.github/workflows/containerize-and-deploy-reports.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - reports-dev-*
+    branches:
+      - master
+    paths:
+      - apps/reports/**
 
 jobs:
   build:
