Schedule task to run every 3 mins

--- a/infra/reports/ecr/serverless.yml
+++ b/infra/reports/ecr/serverless.yml
@@ -33,3 +33,5 @@ resources:
   Outputs:
     reportsRegistryArn:
       Value: !GetAtt ReportsEcrRepository.Arn
+    reportsRegistryUri:
+      Value: !GetAtt ReportsEcrRepository.RepositoryUri
