--- a/infra/reports/ecs/serverless.yml
+++ b/infra/reports/ecs/serverless.yml
@@ -49,7 +49,7 @@ resources:
             #   - KeyValuePair
             # Secrets:
             #   - Secret
-            Image: ${param:reportsRegistryUri}
+            Image: "${param:reportsRegistryUri}:latest"
             LogConfiguration:
               LogDriver: "awslogs"
               Options:
