--- a/apps/reports/docker-compose.yml
+++ b/apps/reports/docker-compose.yml
@@ -8,3 +8,6 @@ services:
       args:
         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
         - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    command:
+      - "node"
+      - "dist/index.js"
