Fix bug by enabling public IP assignment

--- a/infra/reports/events/serverless.yml
+++ b/infra/reports/events/serverless.yml
@@ -38,7 +38,7 @@ resources:
               LaunchType: "FARGATE"
               NetworkConfiguration:
                 AwsVpcConfiguration:
-                  AssignPublicIp: "DISABLED"
+                  AssignPublicIp: "ENABLED"
                   # Example `SecurityGroups` from docs
                   # SecurityGroups:
                   #   Fn: : GetAtt:
