Change IaC for testing purposes

--- a/.github/workflows/containerize-and-deploy-reports.yml
+++ b/.github/workflows/containerize-and-deploy-reports.yml
@@ -8,6 +8,9 @@ on:
       - master
     paths:
       - apps/reports/**
+    # We could use the ignore syntax to collocate the infra with the app code
+    # paths-ignore:
+    #   - 'apps/reports/infra/**'
 
 jobs:
   build:
