--- a/.github/workflows/containerize-and-deploy-reports.yml
+++ b/.github/workflows/containerize-and-deploy-reports.yml
@@ -13,6 +13,28 @@ on:
     #   - 'apps/reports/infra/**'
 
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./apps/reports
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download Node
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: ".nvmrc"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run vitest once on .test.ts files
+        working-directory: ${{ env.working-directory }}
+        run: npx vitest **/*.test.ts --run
+
   build:
     name: Build
     runs-on: ubuntu-latest
