Add needs condition to job to create dependency

--- a/.github/workflows/containerize-and-deploy-reports.yml
+++ b/.github/workflows/containerize-and-deploy-reports.yml
@@ -36,6 +36,8 @@ jobs:
         run: npx vitest **/*.test.ts --run
 
   build:
+    needs:
+      - test
     name: Build
     runs-on: ubuntu-latest
     env:
