Add condition for build job

--- a/.github/workflows/containerize-and-deploy-reports.yml
+++ b/.github/workflows/containerize-and-deploy-reports.yml
@@ -36,10 +36,14 @@ jobs:
         run: npx vitest **/*.test.ts --run
 
   build:
+    # Only run the build step if there is a push/merge to master
+    if: ${{ github.event_name == 'push' || github.event.pull_request.merged == true }}
+
     needs:
       - test
-    name: Build
+
     runs-on: ubuntu-latest
+
     env:
       working-directory: ./apps/reports
 
